<resources>
    <string name="app_name">NavigationComponent</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="user">user</string>
    <string name="ingresar">ingresar</string>
    <string name="sitio_4">sitio 4</string>
    <string name="sitio_3">sitio 3</string>
    <string name="sitio_2">sitio 2</string>
    <string name="sitio_1">sitio 1</string>
</resources>