<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="561dp" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:context=".MapsFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal"
        tools:layout_editor_absoluteX="-128dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/sitio1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sitio_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical_1"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/sitio2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sitio_2"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_1"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical_2"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/sitio3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sitio_3"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_2"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical_3"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <Button
        android:id="@+id/sitio4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sitio_4"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>

